--- a/gerenciador/WebContent/WEB-INF/web.xml
+++ b/gerenciador/WebContent/WEB-INF/web.xml
@@ -15,4 +15,9 @@
   	<url-pattern>/ola</url-pattern>
   </servlet-mapping>
   
+  <session-config>
+    <!-- 10 min -->
+    <session-timeout>10</session-timeout>
+  </session-config>
+
 </web-app>
